objects/SLSI__MyTestQAobject__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__TQACheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TQACheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__TQADate__c</fullName>
        <label>TQADate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLSI__TQAMultiselectPicklist__c</fullName>
        <label>TQAMultiselectPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>United States of America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>MyTestQAobject1</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MyTestQAobject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyTestQAobjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>